# CyberGame

./: .gitignore  CLAUDE.md  CMakeLists.txt  Instrucoes_Iniciais.md  README.md  diagram.json  mark_unused_display_pins.py  mark_unused_v2.py  partitions.csv  sdkconfig  sdkconfig.defaults  wokwi.toml  write_game.py
CyberGameCore/: README.md
CyberGameCore/.obsidian/: graph.json  workspace.json
CyberGameCore/.sync-state/: last-sync.json
CyberGameCore/00_Inbox/: futuro-migrar-p4-JC4880P443.md  index-de-skills.md  log-sincronizacao-consulta.md
CyberGameCore/10_Arquitetura/: diagramas-do-projeto.md  matriz-reacao-ataques.md  plano-implementacao-game-logic.md
CyberGameCore/20_Hardware_HAL/: calibracao-cores-display.md
CyberGameCore/50_Templates/: template-ataque.md  template-driver-hardware.md  template-sala.md
CyberGameCore/90_Historico/: auditoria-hal-legada.md  driver-st7796s.md
CyberGameCore/CHANGELOG/: INDEX.md  README.md
CyberGameCore/CHANGELOG/entries/: 2026-05-26T1700-com-port-17.md  2026-05-26T1815-git-reset-hard.md  2026-05-26T1830-disable-psram.md  2026-05-26T1845-fixes-build-pos-reset.md  2026-05-26T1900-nfc-tolerante.md  2026-05-26T1930-reaplica-pinout.md  2026-05-26T1945-bring-up-mode-completo.md  2026-05-26T2000-audit-routine.md  2026-05-26T2015-fix-audit-findings.md  2026-05-26T2100-pinout-tela-v2.md  2026-05-26T2110-nand-share-spi-tela.md  2026-05-26T2200-fix-mosi-miso-swap.md  2026-05-27T1039-board-pins-centralizacao.md  2026-05-27T1054-vault-reorganizacao-agente.md  2026-05-27T1126-pacote-robustez-G6-G8-G9.md  2026-05-28T0158-feedback-hal-ws2812-buzzer.md  2026-05-28T0230-sd-card-detect-disable-nand.md  (+14 more)
CyberGameCore/CONSULTA/: A resolver.txt  Artigo_extracted.txt  DUVIDAS.TXT  FSM_ANALISE_COMPLETA.md  RESPOSTAS.txt  button_hal.c  button_hal.h  consulta_esquema_eletrico.md  display_hal.c  display_hal.h  joystick_hal.c  joystick_hal.h  lista-de-imagens-c2-personagem-sala2.md  msp_out.txt  pmu.c  pmu.h
CyberGameCore/_AGENT/: CANONICAL_INDEX.md  DECISION_LOG.md  ENTRYPOINT.md  MAINTENANCE.md  MOC_externals.md  MOC_firmware.md  MOC_fsm.md  MOC_game_design.md  MOC_hardware.md  OPEN_QUESTIONS.md  VOCAB.md
assets/: asset_registry.json
assets/dialogos/: recepcionista.txt
assets/layout/: ENTIDADES.txt  POSICOES_empresa.txt  POSICOES_recepcao.txt  empresa.json  recepcao.json
assets/sprites/: DIALOGO.txt  explicacao_sprints.txt
components/asset_store/: CMakeLists.txt  asset_store.c
components/assets/: CMakeLists.txt  asset_chao.c  asset_icone_vermelho.c  asset_loader.c  dialog_loader.c
components/assets/collision/: collision_empresa.c  collision_recepcao.c
components/assets/include/: asset_blob.h  asset_chao.h  asset_icone_vermelho.h  asset_ids.h  asset_loader.h  assets.h  assets_images.h  assets_meta.h  collision_data.h  dialog_blob.h  dialog_loader.h
components/engine/: CMakeLists.txt  defense_matrix.c  engine.c  threat.c
components/engine/include/: defense_matrix.h  engine.h  game_config.h  nfc_config.h  threat.h
components/entity/: CMakeLists.txt  debug_overlay.c  entity_pool.c  idf_component.yml  movement.c  room_layout_gen.c  room_layout_sd.c  y_sort.c
components/fsm/: CMakeLists.txt  fsm.c
components/gamestate/: CMakeLists.txt  gamestate.c
components/hal_bridge/: CMakeLists.txt  hal_bridge.c  idf_component.yml
components/hardware/: Buton.c  Buton.h  CMakeLists.txt  button_hal.c  buzzer_hal.c  display_hal.c  hal_common.c  idf_component.yml  joystick_hal.c  melody_player.c  nfc_hal.c  pmu.c  sd_hal.c  storage_hal.c  ws2812_hal.c
components/hardware/include/: board_pins.h  button_hal.h  buzzer_hal.h  buzzer_melodies.h  display_hal.h  hal_common.h  joystick_hal.h  melody_player.h  nfc_config.h  nfc_hal.h  pmu.h  sd_hal.h  storage_hal.h  ws2812_hal.h
components/recovery/: CMakeLists.txt  recovery.c
components/recovery/Desativado/: idf_component.yml  recovery.h  recovery_proto.h
components/recovery/include/: recovery.h
components/ui/: CMakeLists.txt  room_layout_loader.c  screen_empresa.c  screen_game_over.c  screen_hud.c  screen_menu.c  screen_pause.c  screen_placeholder.c  screen_recepcao.c  screen_room.c  screen_servidor_menu.c  screen_splash.c  screen_tarefa_amarela.c  screen_tarefa_verde.c  screen_tarefa_vermelha.c  screen_web_setor.c  ui_router.c
components/ui/include/: room_layout_loader.h  screen_room.h  screen_servidor_menu.h  screen_tarefa_amarela.h  screen_tarefa_verde.h  screen_tarefa_vermelha.h  screen_web_setor.h  ui.h  ui_internal.h
components/ui_debug/: CMakeLists.txt  ui_debug.c
docs/ai-rules/: 01-architecture.md  02-fsm-pattern.md  03-event-model.md  04-hal-contract.md  05-freertos-rules.md  06-coding-standard.md  07-entity-system.md  08-y-sort-and-collision.md  09-asset-pipeline.md  README.md
hardware/: ESQUEMA_ELETRICO.md  PINOUT  PINOUT.md
hardware/CyberGame_kicad/: CyberGame_kicad.kicad_sch  ~CyberGame_kicad.kicad_sch.lck
hardware/esquematico/: CyberGame.kicad_prl  CyberGame.kicad_pro  CyberGame.kicad_sch
main/: CMakeLists.txt  main.c  version.h  wokwi-project.txt
pc_simulator/: CMakeLists.txt  COMPILAR.bat  README.md  RODAR.bat  lv_conf.h  main.c  sim_engine.c
pc_simulator/esp_idf_shim/: esp_attr.h  esp_check.h  esp_err.h  esp_heap_caps.h  esp_log.h  esp_random.h  esp_timer.h
pc_simulator/esp_idf_shim/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h  timers.h
pc_simulator/hal_fake/: asset_chao_sim.c  asset_icone_vermelho_sim.c  button_hal.c  buzzer_hal.c  hal_common.c  joystick_hal.c  nfc_hal.c  pmu.c  ws2812_hal.c
simulation/: readme.md
simulation/lv_port_pc_eclipse/: CMakeLists.txt  COMPILAR.bat  RODAR.bat  cybersec_game.c  cybersec_game.h  lv_conf.h  main.c
test/host/: CMakeLists.txt  test_fsm.c  test_gamestate.c  test_runner.h
test/host/mocks/: esp_check.h  esp_err.h  esp_log.h
tools/: README.md  asset_codec.py  asset_uploader.py  audit-project.ps1  build_sd_assets.py  convert_assets.py  extract_collisions.py  gen_asset_ids.py  gen_room_layout.py  gerar_layout.py  gerar_previa_assets.py  midi_to_buzzer.py  preparar_recepcao.py  recovery_protocol.py  test_ping.py
(+129 files in other folders)
