idf_component_register(
    SRCS
        "ui_router.c"
        "screen_splash.c"
        "screen_menu.c"
        "screen_placeholder.c"
        "screen_pause.c"
        "screen_recepcao.c"
        "screen_empresa.c"
    INCLUDE_DIRS "include"
    REQUIRES
        "hardware"
        "hal_bridge"
        "lvgl__lvgl"
        "fsm"
        "assets"
    PRIV_REQUIRES
        "esp_timer"
)
