idf_component_register(
    SRCS
        "ui_router.c"
        "screen_splash.c"
        "screen_menu.c"
        "screen_placeholder.c"
        "screen_pause.c"
        "screen_recepcao.c"
        "screen_empresa.c"
        "screen_tarefa_verde.c"
        "screen_tarefa_amarela.c"
        "screen_servidor_menu.c"
        "screen_tarefa_vermelha.c"
        "screen_web_setor.c"
        "screen_room.c"
        "screen_hud.c"
        "screen_game_over.c"
        "room_layout_loader.c"
    INCLUDE_DIRS "include"
    REQUIRES
        "hardware"
        "hal_bridge"
        "lvgl__lvgl"
        "fsm"
        "assets"
        "gamestate"
        "entity"
    PRIV_REQUIRES
        "esp_timer"
        "engine"
)
